# FINANCIAL_ENV

./: .env.example  .gitignore  Dockerfile  README.md  baseline_agent.py  example_agent.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
client/: financial_client.py
graders/: __init__.py  task_graders.py
models/: __init__.py  types.py
server/: __init__.py  app.py  environment.py  llm_agent.py  tools.py
tests/: test_environment.py
