[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "financial-analysis-env"
version = "1.0.0"
description = "OpenEnv-compatible RL environment for financial market analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "websockets>=13.1",
    "pydantic>=2.9.2",
    "huggingface_hub>=0.26.2",
    "yfinance>=0.2.44",
    "pandas>=2.2.3",
    "numpy>=2.1.1",
    "python-dotenv>=1.0.1",
    "openai>=1.0.0",
    "httpx>=0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]
